session(4e performance and accuracy): complete
